force-app/main/default/objects/BAMContactRole__c/BAMContactRole__c.object-meta.xml
<CustomObject>
    <description>This is a junction object that links a contact to a particular Application in the BAM structure.</description>
    <label>Merchant Portal Contact Role</label>
    <nameField>
        <displayFormat>CR-{0000000}</displayFormat>
        <label>Contact Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merchant Portal Contact Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>