force-app/main/default/objects/BAMContactRole__c/fields/ApplicationRole__c.field-meta.xml
<CustomField>
    <fullName>ApplicationRole__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Application Role of this context</description>
    <inlineHelpText>The Application Role of this context</inlineHelpText>
    <label>Application Role</label>
    <referenceTo>BAMApplicationRole__c</referenceTo>
    <relationshipName>ApplicationRoles</relationshipName>
    <type>Lookup</type>
</CustomField>