force-app/main/default/objects/BAMContactRole__c/fields/ContactApplication__c.field-meta.xml
<CustomField>
    <fullName>ContactApplication__c</fullName>
    <description>The contact application the role relates to.</description>
    <label>Contact Application</label>
    <referenceTo>BAMContactApplication__c</referenceTo>
    <relationshipName>ContactRoles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>