force-app/main/default/objects/BAMContactRole__c/fields/Pending_Delete__c.field-meta.xml
<CustomField>
    <fullName>Pending_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag for soft delete of the record while the provisioning flow is Pending.  When the provisioning flow completes the record will be deleted.</description>
    <inlineHelpText>Flag for soft delete of the record while the provisioning flow is Pending.  When the provisioning flow completes the record will be deleted.</inlineHelpText>
    <label>Pending Delete</label>
    <type>Checkbox</type>
</CustomField>