force-app/main/default/objects/BAMContactRole__c/validationRules/BAMContactRoleIsValid.validationRule-meta.xml
<ValidationRule>
    <fullName>BAMContactRoleIsValid</fullName>
    <active>true</active>
    <description>Ensures that the application linked to the contact role entered matches the contact application&apos;s application field</description>
    <errorConditionFormula>ApplicationRole__r.Application__c !=  ContactApplication__r.Application__c</errorConditionFormula>
    <errorMessage>The application role selected is not valid for the Contact Application</errorMessage>
</ValidationRule>